@@ -5,15 +5,14 @@ import gestiondeunbanco.wilmervega.domain.models.BankAccount;
 import gestiondeunbanco.wilmervega.domain.models.AccountStatus;
 import gestiondeunbanco.wilmervega.domain.models.AccountType;
 import gestiondeunbanco.wilmervega.domain.models.Currency;
-import gestiondeunbanco.wilmervega.domain.models.Client;
 import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.repositories.BankAccountRepository;
 import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.BankAccountEntity;
+import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.ClientEntity;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -23,12 +22,17 @@ public class BankAccountPersistenceAdapter implements BankAccountPort {
 
     @Override
     public List<BankAccount> findAll() {
-        return repository.findAll().stream().map(this::toModel).collect(Collectors.toList());
+        return repository.findAll().stream().map(this::toModel).toList();
     }
 
     @Override
     public Optional<BankAccount> findById(Long id) {
         return repository.findById(id).map(this::toModel);
+    }
+
+    @Override
+    public List<BankAccount> findByHolderId(Long holderId) {
+        return repository.findByHolder_Id(holderId).stream().map(this::toModel).toList();
     }
 
     @Override
@@ -38,7 +42,7 @@ public class BankAccountPersistenceAdapter implements BankAccountPort {
 
     @Override
     public List<BankAccount> findByAccountStatus(AccountStatus status) {
-        return repository.findAll().stream().filter(r -> r.getAccountStatus() != null && r.getAccountStatus().equals(status.name())).map(this::toModel).collect(Collectors.toList());
+        return repository.findByAccountStatus(status.name()).stream().map(this::toModel).toList();
     }
 
     @Override
@@ -48,8 +52,7 @@ public class BankAccountPersistenceAdapter implements BankAccountPort {
 
     @Override
     public BankAccount save(BankAccount bankAccount) {
-        BankAccountEntity entity = toEntity(bankAccount);
-        return toModel(repository.save(entity));
+        return toModel(repository.save(toEntity(bankAccount)));
     }
 
     @Override
@@ -60,6 +63,7 @@ public class BankAccountPersistenceAdapter implements BankAccountPort {
     private BankAccountEntity toEntity(BankAccount model) {
         BankAccountEntity entity = new BankAccountEntity();
         entity.setId(model.getId());
+        entity.setVersion(model.getVersion());
         entity.setAccountNumber(model.getAccountNumber());
         entity.setAccountType(model.getAccountType() != null ? model.getAccountType().name() : null);
         entity.setCurrentBalance(model.getCurrentBalance());
@@ -67,7 +71,7 @@ public class BankAccountPersistenceAdapter implements BankAccountPort {
         entity.setAccountStatus(model.getAccountStatus() != null ? model.getAccountStatus().name() : null);
         entity.setOpeningDate(model.getOpeningDate());
         if (model.getHolder() != null) {
-            gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.ClientEntity clientEntity = new gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.ClientEntity();
+            ClientEntity clientEntity = new ClientEntity();
             clientEntity.setId(model.getHolder().getId());
             entity.setHolder(clientEntity);
         }
@@ -77,17 +81,45 @@ public class BankAccountPersistenceAdapter implements BankAccountPort {
     private BankAccount toModel(BankAccountEntity entity) {
         BankAccount model = new BankAccount();
         model.setId(entity.getId());
+        model.setVersion(entity.getVersion());
         model.setAccountNumber(entity.getAccountNumber());
         if (entity.getAccountType() != null) model.setAccountType(AccountType.valueOf(entity.getAccountType()));
         model.setCurrentBalance(entity.getCurrentBalance());
         if (entity.getCurrency() != null) model.setCurrency(Currency.valueOf(entity.getCurrency()));
         if (entity.getAccountStatus() != null) model.setAccountStatus(AccountStatus.valueOf(entity.getAccountStatus()));
         model.setOpeningDate(entity.getOpeningDate());
-        if (entity.getHolder() != null) {
-            gestiondeunbanco.wilmervega.domain.models.NaturalClient c = new gestiondeunbanco.wilmervega.domain.models.NaturalClient();
-            c.setId(entity.getHolder().getId());
-            model.setHolder(c);
+
+        // Reconstruct holder respecting real type (JOINED inheritance)
+        if (entity.getHolder() instanceof gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.CompanyClientEntity companyEntity) {
+            gestiondeunbanco.wilmervega.domain.models.CompanyClient company =
+                    new gestiondeunbanco.wilmervega.domain.models.CompanyClient();
+            company.setId(companyEntity.getId());
+            company.setDocumentNumber(companyEntity.getDocumentNumber());
+            company.setEmail(companyEntity.getEmail());
+            company.setPhone(companyEntity.getPhone());
+            company.setAddress(companyEntity.getAddress());
+            company.setBusinessName(companyEntity.getBusinessName());
+            model.setHolder(company);
+        } else if (entity.getHolder() != null) {
+            gestiondeunbanco.wilmervega.domain.models.NaturalClient natural =
+                    new gestiondeunbanco.wilmervega.domain.models.NaturalClient();
+            natural.setId(entity.getHolder().getId());
+            natural.setDocumentNumber(entity.getHolder().getDocumentNumber());
+            natural.setEmail(entity.getHolder().getEmail());
+            natural.setPhone(entity.getHolder().getPhone());
+            natural.setAddress(entity.getHolder().getAddress());
+            if (entity.getHolder() instanceof gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.NaturalClientEntity naturalEntity) {
+                natural.setFullName(naturalEntity.getFullName());
+                natural.setBirthDate(naturalEntity.getBirthDate());
+                if (naturalEntity.getRole() != null) {
+                    try {
+                        natural.setRole(gestiondeunbanco.wilmervega.domain.models.SystemRole.valueOf(naturalEntity.getRole()));
+                    } catch (IllegalArgumentException ignored) { }
+                }
+            }
+            model.setHolder(natural);
         }
+
         return model;
     }
 }
