@@ -1,27 +1,34 @@
 package gestiondeunbanco.wilmervega.application.adapters.persistence.sql;
 
+import gestiondeunbanco.wilmervega.domain.exceptions.NotFoundException;
 import gestiondeunbanco.wilmervega.domain.ports.LoanPort;
 import gestiondeunbanco.wilmervega.domain.models.Loan;
 import gestiondeunbanco.wilmervega.domain.models.LoanType;
 import gestiondeunbanco.wilmervega.domain.models.LoanStatus;
 import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.repositories.LoanRepository;
 import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.LoanEntity;
+import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.ClientEntity;
+import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.CompanyClientEntity;
+import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.NaturalClientEntity;
+import gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.BankAccountEntity;
+import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class LoanPersistenceAdapter implements LoanPort {
 
     private final LoanRepository repository;
+    private final EntityManager entityManager;
 
     @Override
     public List<Loan> findAll() {
-        return repository.findAll().stream().map(this::toModel).collect(Collectors.toList());
+        return repository.findAll().stream().map(this::toModel).toList();
     }
 
     @Override
@@ -30,14 +37,34 @@ public class LoanPersistenceAdapter implements LoanPort {
     }
 
     @Override
+    @Transactional
     public Loan save(Loan loan) {
-        LoanEntity entity = toEntity(loan);
-        return toModel(repository.save(entity));
+        if (loan == null) {
+            throw new IllegalArgumentException("Loan cannot be null");
+        }
+        return toModel(repository.save(toEntity(loan)));
     }
 
     @Override
     public void deleteById(Long id) {
         repository.deleteById(id);
+    }
+
+    @Override
+    public List<Loan> findByStatus(LoanStatus status) {
+        return repository.findByLoanStatus(status.name()).stream()
+                .map(this::toModel).toList();
+    }
+
+    @Override
+    public List<Loan> findByClientDocument(String documentNumber) {
+        return repository.findByClientApplicant_DocumentNumber(documentNumber).stream()
+                .map(this::toModel).toList();
+    }
+
+    @Override
+    public boolean existsById(Long id) {
+        return repository.existsById(id);
     }
 
     private LoanEntity toEntity(Loan model) {
@@ -51,15 +78,14 @@ public class LoanPersistenceAdapter implements LoanPort {
         if (model.getLoanStatus() != null) entity.setLoanStatus(model.getLoanStatus().name());
         entity.setApprovalDate(model.getApprovalDate());
         entity.setDisbursementDate(model.getDisbursementDate());
-        if (model.getNaturalClientApplicant() != null) {
-            gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.NaturalClientEntity nc = new gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.NaturalClientEntity();
-            nc.setId(model.getNaturalClientApplicant().getId());
-            entity.setNaturalClientApplicant(nc);
+        entity.setApprovedByUserId(model.getApprovedByUserId());
+        if (model.getClientApplicant() != null && model.getClientApplicant().getId() != null) {
+            entity.setClientApplicant(entityManager.getReference(ClientEntity.class, model.getClientApplicant().getId()));
         }
-        if (model.getCompanyClientApplicant() != null) {
-            gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.CompanyClientEntity cc = new gestiondeunbanco.wilmervega.application.adapters.persistence.sql.entities.CompanyClientEntity();
-            cc.setId(model.getCompanyClientApplicant().getId());
-            entity.setCompanyClientApplicant(cc);
+        if (model.getDisbursementAccount() != null && model.getDisbursementAccount().getId() != null) {
+            BankAccountEntity ba = new BankAccountEntity();
+            ba.setId(model.getDisbursementAccount().getId());
+            entity.setDisbursementAccount(ba);
         }
         return entity;
     }
@@ -75,16 +101,62 @@ public class LoanPersistenceAdapter implements LoanPort {
         if (entity.getLoanStatus() != null) model.setLoanStatus(LoanStatus.valueOf(entity.getLoanStatus()));
         model.setApprovalDate(entity.getApprovalDate());
         model.setDisbursementDate(entity.getDisbursementDate());
-        if (entity.getNaturalClientApplicant() != null) {
-            gestiondeunbanco.wilmervega.domain.models.NaturalClient c = new gestiondeunbanco.wilmervega.domain.models.NaturalClient();
-            c.setId(entity.getNaturalClientApplicant().getId());
-            model.setNaturalClientApplicant(c);
+        model.setApprovedByUserId(entity.getApprovedByUserId());
+
+        // Reconstruct clientApplicant from stored entity
+        if (entity.getClientApplicant() != null) {
+            ClientEntity clientEntity = entity.getClientApplicant();
+            if (clientEntity instanceof CompanyClientEntity companyEntity) {
+                gestiondeunbanco.wilmervega.domain.models.CompanyClient applicant =
+                        new gestiondeunbanco.wilmervega.domain.models.CompanyClient();
+                applicant.setId(companyEntity.getId());
+                applicant.setDocumentNumber(companyEntity.getDocumentNumber());
+                applicant.setEmail(companyEntity.getEmail());
+                applicant.setPhone(companyEntity.getPhone());
+                applicant.setAddress(companyEntity.getAddress());
+                applicant.setBusinessName(companyEntity.getBusinessName());
+                model.setClientApplicant(applicant);
+            } else if (clientEntity instanceof NaturalClientEntity naturalEntity) {
+                gestiondeunbanco.wilmervega.domain.models.NaturalClient applicant =
+                        new gestiondeunbanco.wilmervega.domain.models.NaturalClient();
+                applicant.setId(naturalEntity.getId());
+                applicant.setDocumentNumber(naturalEntity.getDocumentNumber());
+                applicant.setEmail(naturalEntity.getEmail());
+                applicant.setPhone(naturalEntity.getPhone());
+                applicant.setAddress(naturalEntity.getAddress());
+                applicant.setFullName(naturalEntity.getFullName());
+                applicant.setBirthDate(naturalEntity.getBirthDate());
+                if (naturalEntity.getRole() != null) {
+                    applicant.setRole(gestiondeunbanco.wilmervega.domain.models.SystemRole.valueOf(naturalEntity.getRole()));
+                }
+                model.setClientApplicant(applicant);
+            } else {
+                gestiondeunbanco.wilmervega.domain.models.NaturalClient applicant =
+                        new gestiondeunbanco.wilmervega.domain.models.NaturalClient();
+                applicant.setId(clientEntity.getId());
+                applicant.setDocumentNumber(clientEntity.getDocumentNumber());
+                applicant.setEmail(clientEntity.getEmail());
+                applicant.setPhone(clientEntity.getPhone());
+                applicant.setAddress(clientEntity.getAddress());
+                model.setClientApplicant(applicant);
+            }
         }
-        if (entity.getCompanyClientApplicant() != null) {
-            gestiondeunbanco.wilmervega.domain.models.CompanyClient c = new gestiondeunbanco.wilmervega.domain.models.CompanyClient();
-            c.setId(entity.getCompanyClientApplicant().getId());
-            model.setCompanyClientApplicant(c);
+
+        // Reconstruct disbursementAccount from stored entity
+        if (entity.getDisbursementAccount() != null) {
+            gestiondeunbanco.wilmervega.domain.models.BankAccount account =
+                    new gestiondeunbanco.wilmervega.domain.models.BankAccount();
+            account.setId(entity.getDisbursementAccount().getId());
+            account.setAccountNumber(entity.getDisbursementAccount().getAccountNumber());
+            account.setCurrentBalance(entity.getDisbursementAccount().getCurrentBalance());
+            if (entity.getDisbursementAccount().getAccountStatus() != null) {
+                account.setAccountStatus(
+                    gestiondeunbanco.wilmervega.domain.models.AccountStatus
+                        .valueOf(entity.getDisbursementAccount().getAccountStatus()));
+            }
+            model.setDisbursementAccount(account);
         }
+
         return model;
     }
 }
